--- a/template/homeAO.html
+++ b/template/homeAO.html
@@ -18,7 +18,7 @@
 <div class="container">
     <div class="row mb-5 mt-3 py-4">
         
-        <div class="col-md-4 col-sm-6 col-12">
+        <div class="col-md-4 col-sm-6 col-12" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000">
             <a href="{% url 'vehDetail' %}" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-lg bi-truck" style="font-size: 6rem;"></i>
@@ -32,7 +32,7 @@
         </a>
         </div>
 
-        <div class="col-md-4 col-sm-6 col-12">
+        <div class="col-md-4 col-sm-6 col-12" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50" data-aos-duration="2000">
             <a href="" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-menu-button-wide-fill" style="font-size: 6rem;"></i>
@@ -46,7 +46,7 @@
         </a>
         </div>
 
-        <div class="col-md-4 col-sm-6 col-12">
+        <div class="col-md-4 col-sm-6 col-12" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50" data-aos-duration="3000">
             <a href="#" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-graph-up" style="font-size: 6rem;"></i>
