--- a/template/homeNCO.html
+++ b/template/homeNCO.html
@@ -19,7 +19,7 @@
 <div class="container">
     <div class="row mb-5 mt-3 py-4 d-flex justify-content-center align-items-center">
         
-        <div class="col-md-4 col-sm-6 col-12 my-4">
+        <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000">
             <a href="#" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-speedometer2" style="font-size: 6rem;"></i>
@@ -33,7 +33,7 @@
         </a>
         </div>
 
-        <div class="col-md-4 col-sm-6 col-12 my-4">
+        <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="75" data-aos-duration="1500">
             <a href="#" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-layers-half" style="font-size: 6rem;"></i>
@@ -47,7 +47,7 @@
         </a>
         </div>
 
-        <div class="col-md-4 col-sm-6 col-12 my-4">
+        <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="100" data-aos-duration="2000">
             <a href="#" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-check-square" style="font-size: 6rem;"></i>
@@ -61,7 +61,7 @@
         </a>
         </div>
 
-        <div class="col-md-4 col-sm-6 col-12 my-4">
+        <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000">
             <a href="{% url 'vehDetail' %}" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-truck" style="font-size: 6rem;"></i>
@@ -75,7 +75,7 @@
         </a>
         </div>
 
-        <div class="col-md-4 col-sm-6 col-12 my-4">
+        <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="75" data-aos-duration="1500">
             <a href="#" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-person-lines-fill" style="font-size: 6rem;"></i>
@@ -89,7 +89,7 @@
         </a>
         </div>
 
-        <div class="col-md-4 col-sm-6 col-12 my-4">
+        <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="100" data-aos-duration="2000">
             <a href="#" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-arrow-left-right" style="font-size: 6rem;"></i>
@@ -103,7 +103,7 @@
         </a>
         </div>
 
-        <div class="col-md-4 col-sm-6 col-12 my-4">
+        <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000">
             <a href="#" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-tools" style="font-size: 6rem;"></i>
@@ -117,7 +117,7 @@
         </a>
         </div>
 
-        <div class="col-md-4 col-sm-6 col-12 my-4">
+        <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="75" data-aos-duration="1500">
             <a href="#" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-menu-button-wide-fill" style="font-size: 6rem;"></i>
