--- a/template/homeDvr.html
+++ b/template/homeDvr.html
@@ -19,7 +19,7 @@
     <div class="row mb-5 mt-3 py-4 d-flex justify-content-center align-items-center">
         
         <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000">
-            <a href="#" class='links nav-link text-dark'>
+            <a href="{% url 'pol' %}" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-speedometer2" style="font-size: 6rem;"></i>
             </div>
@@ -27,13 +27,13 @@
                 POL
             </div>
             <div class="col-12 h6 text-center">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, ipsam!
+                POL states of all vehicle.
             </div>
         </a>
         </div>
 
         <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="75" data-aos-duration="2000">
-            <a href="#" class='links nav-link text-dark'>
+            <a href="{% url 'nextdayduty' %}" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-arrow-90deg-right" style="font-size: 6rem;"></i>
             </div>
