--- a/template/homeNCO.html
+++ b/template/homeNCO.html
@@ -20,7 +20,7 @@
     <div class="row mb-5 mt-3 py-4 d-flex justify-content-center align-items-center">
         
         <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000">
-            <a href="#" class='links nav-link text-dark'>
+            <a href="{% url 'addpol' %}" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-speedometer2" style="font-size: 6rem;"></i>
             </div>
@@ -34,7 +34,7 @@
         </div>
 
         <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="75" data-aos-duration="1500">
-            <a href="#" class='links nav-link text-dark'>
+            <a href="{% url 'requestVeh' %}" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-layers-half" style="font-size: 6rem;"></i>
             </div>
@@ -48,7 +48,7 @@
         </div>
 
         <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="100" data-aos-duration="2000">
-            <a href="#" class='links nav-link text-dark'>
+            <a href="{% url 'pendingReq' %}" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-check-square" style="font-size: 6rem;"></i>
             </div>
@@ -76,7 +76,7 @@
         </div>
 
         <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="75" data-aos-duration="1500">
-            <a href="#" class='links nav-link text-dark'>
+            <a href="{% url 'ncos' %}" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-person-lines-fill" style="font-size: 6rem;"></i>
             </div>
@@ -90,7 +90,7 @@
         </div>
 
         <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="100" data-aos-duration="2000">
-            <a href="#" class='links nav-link text-dark'>
+            <a href="{% url 'handingtaking' %}" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-arrow-left-right" style="font-size: 6rem;"></i>
             </div>
@@ -104,7 +104,7 @@
         </div>
 
         <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="50" data-aos-duration="1000">
-            <a href="#" class='links nav-link text-dark'>
+            <a href="{% url 'repairvehicle' %}" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-tools" style="font-size: 6rem;"></i>
             </div>
@@ -118,7 +118,7 @@
         </div>
 
         <div class="col-md-4 col-sm-6 col-12 my-4" data-aos="fade-up" data-aos-offset="200" data-aos-delay="75" data-aos-duration="1500">
-            <a href="#" class='links nav-link text-dark'>
+            <a href="{% url 'dailyReport' %}" class='links nav-link text-dark'>
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <i class="bi bi-menu-button-wide-fill" style="font-size: 6rem;"></i>
             </div>
